Changes: added: Form fields padding left changed: navbar login button style, mobile products paddings, fixed: long aos delay on mobile phones, wrong cancel button font(order submit)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,3 +57,10 @@ body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 480px) {
+  [data-aos-delay] {
+    transition-delay: 0ms !important;
+  }
+
+}
