--- a/client/src/components/CustomMenu/CustomMenu.css
+++ b/client/src/components/CustomMenu/CustomMenu.css
@@ -13,7 +13,7 @@
   position: relative;
 }
 
-.custom-menu-item:hover {
+.szh-menu__item, .custom-menu-item:hover {
   transition: none;
   animation: none;
   background: none !important;
